# model-exposure

model-training/: linear_regression.py  pyproject.toml
model-training/models/: linear_regression.pkl
